Fix versions button icon alignment on large screens

--- a/src/styles/containers/_configurations.scss
+++ b/src/styles/containers/_configurations.scss
@@ -39,10 +39,13 @@
       width: 25px;
       height: 25px;
       position: relative;
-      margin: 7px 10px 0 0;
+      margin: 16px 10px 0 0;
       background-color: rgba($black, 0.1);
       border-radius: 50%;
       vertical-align: top;
+      @include md {
+        margin: 7px 10px 0 0;
+      }
     }
 
     .icon {
